// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Retreive GetInfo of FACAD-BuiltInCategories 1`] = `
Object {
  "Actions": Object {
    "Delete": false,
    "Insert": false,
    "Update": false,
  },
  "Fields": Array [
    Object {
      "Combobox": null,
      "Editable": false,
      "Name": "BuiltInCategory",
      "Primary": true,
      "Required": false,
      "Select": null,
      "Type": "String",
    },
  ],
}
`;

exports[`Retreive GetInfo of FACAD-CFT 1`] = `
Object {
  "Actions": Object {
    "Delete": true,
    "Insert": true,
    "Update": true,
  },
  "Fields": Array [
    Object {
      "Combobox": null,
      "Editable": false,
      "Name": "ID",
      "Primary": true,
      "Required": false,
      "Select": null,
      "Type": "Number",
    },
    Object {
      "Combobox": null,
      "Editable": true,
      "Name": "Project",
      "Primary": false,
      "Required": false,
      "Select": null,
      "Type": "Number",
    },
    Object {
      "Combobox": null,
      "Editable": true,
      "Name": "Category",
      "Primary": false,
      "Required": true,
      "Select": null,
      "Type": "String",
    },
    Object {
      "Combobox": null,
      "Editable": true,
      "Name": "FamilyType",
      "Primary": false,
      "Required": true,
      "Select": null,
      "Type": "String",
    },
    Object {
      "Combobox": null,
      "Editable": true,
      "Name": "Key",
      "Primary": false,
      "Required": true,
      "Select": null,
      "Type": "String",
    },
    Object {
      "Combobox": Object {
        "Display": "BuiltInCategory",
        "Params": Object {
          "BuiltInCategory": "BuiltInCategory",
        },
        "Source": "FACAD-BuiltInCategories",
        "Value": "BuiltInCategory",
      },
      "Editable": true,
      "Name": "BuiltInCategory",
      "Primary": false,
      "Required": true,
      "Select": null,
      "Type": "String",
    },
    Object {
      "Combobox": null,
      "Editable": true,
      "Name": "ReportType",
      "Primary": false,
      "Required": true,
      "Select": Array [
        "Schedule",
        "MaterialTakeoff",
        "KeynoteLegend",
        "KeySchedule",
        "RevisionSchedule",
        "NoteBlock",
      ],
      "Type": "String",
    },
    Object {
      "Combobox": Object {
        "Display": "Field",
        "Params": Object {
          "BuiltInCategory": "BuiltInCategory",
          "Field": "KeynoteField",
          "ReportType": "ReportType",
        },
        "Source": "FACAD-ParamsBIC",
        "Value": "Field",
      },
      "Editable": true,
      "Name": "KeynoteField",
      "Primary": false,
      "Required": false,
      "Select": null,
      "Type": "String",
    },
    Object {
      "Combobox": Object {
        "Display": "Field",
        "Params": Object {
          "BuiltInCategory": "BuiltInCategory",
          "Field": "ConstraintField",
          "ReportType": "ReportType",
        },
        "Source": "FACAD-ParamsBIC",
        "Value": "Field",
      },
      "Editable": true,
      "Name": "ConstraintField",
      "Primary": false,
      "Required": false,
      "Select": null,
      "Type": "String",
    },
    Object {
      "Combobox": Object {
        "Display": "Field",
        "Params": Object {
          "BuiltInCategory": "BuiltInCategory",
          "Field": "QuantityField",
          "ReportType": "ReportType",
        },
        "Source": "FACAD-ParamsBIC",
        "Value": "Field",
      },
      "Editable": true,
      "Name": "QuantityField",
      "Primary": false,
      "Required": false,
      "Select": null,
      "Type": "String",
    },
  ],
}
`;

exports[`Retreive GetInfo of FACAD-Reports 1`] = `
Object {
  "Actions": Object {
    "Delete": true,
    "Insert": true,
    "Update": true,
  },
  "Fields": Array [
    Object {
      "Combobox": null,
      "Editable": false,
      "Name": "ID",
      "Primary": true,
      "Required": false,
      "Select": null,
      "Type": "Number",
    },
    Object {
      "Combobox": null,
      "Editable": true,
      "Name": "Name",
      "Primary": false,
      "Required": true,
      "Select": null,
      "Type": "String",
    },
    Object {
      "Combobox": null,
      "Editable": true,
      "Name": "BuiltInCategory",
      "Primary": false,
      "Required": true,
      "Select": null,
      "Type": "String",
    },
    Object {
      "Combobox": null,
      "Editable": true,
      "Name": "PathName",
      "Primary": false,
      "Required": true,
      "Select": null,
      "Type": "String",
    },
  ],
}
`;
